
syntax = "proto3";

package shelf.v1;

import "protoc-gen-openapiv2/options/annotations.proto";

option java_multiple_files = true;
option java_outer_classname = "BookProto";
option java_package = "com.apssouza.bookstore.shelf.v1";
option go_package = "shelf/v1;shelfv1";

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        version: "1.0";
        title: "Shelf service definition";
    };
    schemes: [HTTPS, HTTP];
    host: "my.hostname.gov";
};


// This API manages shelves resources.
service ShelfService {
    // Returns a list of all shelves in the bookstore.
    rpc ListShelves(ListShelvesRequest) returns (ListShelvesResponse) {}
    // Creates a new shelf in the bookstore.
    rpc CreateShelf (CreateShelfRequest) returns (CreateShelfResponse) {}
    // Returns a specific bookstore shelf.
    rpc GetShelf (GetShelfRequest) returns (GetShelfResponse) {}
    // Deletes a shelf, including all books that are stored on the shelf.
    rpc DeleteShelf(DeleteShelfRequest) returns (DeleteShelfResponse) {}
}
// DeleteShelf response
message DeleteShelfResponse {}

// ListShelves request
message ListShelvesRequest {}

// A shelf resource.
message GetShelfResponse {
    // A unique shelf id.
    int64 id = 1;
    // A theme of the shelf (fiction, poetry, etc).
    string theme = 2;
}

// A shelf resource.
message CreateShelfResponse {
    // A unique shelf id.
    int64 id = 1;
    // A theme of the shelf (fiction, poetry, etc).
    string theme = 2;
}

// Response to ListShelves call.
message ListShelvesResponse {
    // Shelves in the bookstore.
    repeated CreateShelfResponse shelves = 1;
}

// Request message for CreateShelf method.
message CreateShelfRequest {
    // The shelf resource to create.
    CreateShelfResponse shelf = 1;
}

// Request message for GetShelf method.
message GetShelfRequest {
    // The ID of the shelf resource to retrieve.
    int64 shelf = 1;
}

// Request message for DeleteShelf method.
message DeleteShelfRequest {
    // The ID of the shelf to delete.
    int64 shelf = 1;
}
